# CS690

./: .gitignore  README.md  main.py  pyproject.toml  scmodal-citeseq.py
CS690.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scMODAL/scmodal/: __init__.py  model.py  utils.py
