[project]
name = "CS690"
version = "1.0.0"
description = "CS690 Project"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  # CUDA 11.8 
  "torch==2.1.2+cu118",
  "torchvision==0.16.2+cu118",
  "transformers==4.38.2",
  "diffusers==0.27.2",
  "tokenizers==0.15.2",
  "huggingface-hub==0.25.2",
  "accelerate>=1.0.0",
  "datasets>=2.14.0",
  "einops>=0.7.0",
  "safetensors>=0.4.2",
  "pandas>=2.1.0",
  "numpy<2.0",
  "scipy>=1.12.0",
  # scMODAL dependencies - single-cell analysis
  "scanpy>=1.7.2",
  "anndata>=0.7.6",
  "umap-learn>=0.4.6",
  "numba>=0.56.0",  # >=0.49.1 from env.yml, but >=0.56.0 for Python 3.11 compatibility
  "matplotlib>=3.7,<3.11",  # relaxed from <3.7 to support Python 3.11
  "scikit-learn>=1.3.0",
  "python-annoy>=1.17.1",
  # imaging and other dependencies
  "pillow>=10.3.0",
  "scikit-image>=0.22.0",
  "clean-fid>=0.1.35",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "wandb>=0.17.0",
  "pydicom>=2.4.4",
  "nibabel>=5.2.1",
  # "triton==2.1.0",
  # runtime build tools required by Triton at import time in some envs
  "setuptools>=68",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]
bnb = [
  # 8-bit Adam optimizer to reduce optimizer state memory on GPUs
  # CUDA 11.8-friendly release (avoids cu12 provider deps under uv)
  "bitsandbytes==0.41.1",
]

# PyTorch CUDA 11.8 index for correct wheel resolution
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
