[project]
name = "CS690"
version = "1.0.0"
description = "CS690 Project"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  # CUDA 11.8 - explicitly pin cu118 builds
  "torch==2.1.2+cu118",
  "torchvision==0.16.2+cu118",
  "transformers==4.38.2",
  "diffusers==0.27.2",
  "tokenizers==0.15.2",
  "huggingface-hub==0.25.2",
  "accelerate>=1.0.0",
  "datasets>=2.14.0",
  "einops>=0.7.0",
  "safetensors>=0.4.2",
  "pandas>=2.1.0",
  "numpy<2.0",
  "scipy>=1.12.0",
  # scMODAL dependencies - single-cell analysis
  "scanpy>=1.7.2",
  "anndata>=0.7.6",
  "umap-learn>=0.4.6",
  "numba>=0.56.0",
  "matplotlib>=3.7,<3.11",
  "scikit-learn>=1.3.0",
  "annoy>=1.17.1",
  # imaging and other dependencies
  "pillow>=10.3.0",
  "scikit-image>=0.22.0",
  "clean-fid>=0.1.35",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "wandb>=0.17.0",
  "pydicom>=2.4.4",
  "nibabel>=5.2.1",
  # "triton==2.1.0",  # Removed - pulls CUDA 12 deps
  "setuptools>=68",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]
bnb = [
  "bitsandbytes==0.41.1",
]
triton = [
  "triton>=2.1.0",
]

# Configure setuptools package discovery - exclude unwanted packages
[tool.setuptools]
packages = ["scMODAL"]

# Configure uv to use PyPI as primary, PyTorch as extra
[tool.uv]
index-url = "https://pypi.org/simple/"
extra-index-url = ["https://download.pytorch.org/whl/cu118"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"